# OpenRadical

./: .gitignore  Doxyfile  README.md  cache.c  diei.c  glue.c  graphdev.c  initsys.c  iopheap.h  ipuinit.c  kprintf.c  libdma.c  libipu.c  libmc.c  libmtap.h  libscedemo.c  lost+found.h  thread.c
Artwork/: OpenRadical_Logo_Banner_Doxygen.xcf
Documentation/: OpenTS2_Developer_CompilingPS2StreamDriver.md  OpenTS2_Technical_CodeStructure.md  OpenTS2_Technical_KnownFileTypes.md  OpenTS2_Technical_KnownLimitations.md  OpenTS2_Technical_PS2SDKs.md
Documentation/FileFormats/: OpenTS2_FileFormats_PAK.md
Tools/frdbaf/: Cargo.toml
Tools/frdpak/: Cargo.toml  README.md
Tools/frdpak/src/: lib.rs  main.rs
game/anim/: anim.c  anim.h  cs_anim.h
game/bg/: bg.h  tiles.c
game/boss/: boss.c  boss.h  strings_e.h  strings_f.h  strings_g.c  strings_i.c
game/chr/: inventory.c  inventory.h
game/em/: bumpmap.c  bumpmap.h  dl.c  image.c  image.h
game/enemy/: enemyArcade.h  enemyCore.c  enemyCore.h
game/file/: file.c  file.h
game/front/: front.c  front.h  front_mpg.h  frontfx.h  frontred.c  gui.c  gui.h  loading.c  mcseq.c  mcseq.h  menus.c  textbox.h  zoombox.c
game/fx/: blastring.c  blastring.h  credits.c  decal.c  decal.h  imageproc.c  particle.c  roomfx.c  roomfx.h  specialfx.h  spray.h  weather.c  zbtest.c
game/game/: challenge.c  challenge.h  cheats.c  cheats.h  game.c  game.h  signon.h  unlock.c  unlock.h
game/gun/: cartridge.c  gun.h  gunfx.c  gunfx.h
game/hud/: hud.h
game/lv/: setup_dam.c  setup_hangar.c  setup_hospital.c  setup_hospital.h  setup_martian.h  (+12 more)
(+903 files in other folders)
